inserindo projetos do github

--- a/index.html
+++ b/index.html
@@ -53,33 +53,9 @@
                 <div class="skills">
                     <section class="tools">
                         <h3>Habilidades Profissionais</h3>
-                        <ul>
+                        <ul id="profile.skills.hardSkills">
                             <li>
                                 <img src="/assets/img/icons/tools/react.svg" alt="react" title="react">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/css.svg" alt="css" title="css">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/git.svg" alt="git" title="git">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/github2.svg" alt="github" title="github">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/html.svg" alt="html" title="html">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/java.svg" alt="java" title="java">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/javascript.svg" alt="javascript" title="javascript">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/node.svg" alt="node" title="node">
-                            </li>
-                            <li>
-                                <img src="/assets/img/icons/tools/sql.svg" alt="sql" title="sql">
                             </li>
                         </ul>
                     </section>
@@ -100,9 +76,8 @@
             </button>
 
             <div class="content">
-                <ul class="languages">
-                    <li>Português (BR)</li>
-                    <li>Inglês</li>
+                <ul class="languages" id="profile.languages">
+                    <li>Carregando...</li>
                 </ul>
             </div>
         </section>
@@ -114,14 +89,6 @@
 
             <div class="content">
                <ul class="portfolio">
-                    <li>
-                        <h3 class="title github">Criando um App de lembrete</h3>
-                        <a href="https://www.google.com" target="_blank">www.google.com.br</a>
-                    </li>
-                    <li>
-                        <h3 class="title github">Criando um App de lembrete</h3>
-                        <a href="https://www.google.com" target="_blank">www.google.com.br</a>
-                    </li>
                     <li>
                         <h3 class="title github">Criando um App de lembrete</h3>
                         <a href="https://www.google.com" target="_blank">www.google.com.br</a>
