criando funcão para atualizar os projetos

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </button>
 
             <div class="content">
-               <ul class="portfolio">
+               <ul class="portfolio" id="profile.portfolio">
                     <li>
                         <h3 class="title github">Criando um App de lembrete</h3>
                         <a href="https://www.google.com" target="_blank">www.google.com.br</a>
