criando funcão de atualizar as experiências profissionais

--- a/index.html
+++ b/index.html
@@ -103,19 +103,12 @@
             </button>
 
             <div class="content">
-               <ul class="experience">
+               <ul class="experience" id="profile.experience">
                     <li>
-                        <h3 class="title">Estagiário / Medbolso</h3>
-                        <p class="period">Jan 2020 - Current</p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam iure possimus doloremque, vel minima similique facere nobis, perspiciatis quibusdam, consectetur quas tempora facilis placeat distinctio pariatur obcaecati nemo dolorem nihil?
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="title">Estagiário / Execute</h3>
-                        <p class="period">Jan 2020 - Current</p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam iure possimus doloremque, vel minima similique facere nobis, perspiciatis quibusdam, consectetur quas tempora facilis placeat distinctio pariatur obcaecati nemo dolorem nihil?
+                        <h3 class="title">Carregando...</h3>
+                        <p class="period">Carregando...</p>
+                        <p> 
+                            Carregando...
                         </p>
                     </li>
                </ul> 
