atualizando experiências profissionais no json

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="tel:(91) 99999-9999" id="profile.phone">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:rodrigoarth49@gmail.com" id="profile.email">Carregando...</a>
+                    <a href="mailto:carregando@gmail.com" id="profile.email">Carregando...</a>
                 </p>
             </div>
         </header>
