--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <li>
                         <h3 class="title">Carregando...</h3>
                         <p class="period">Carregando...</p>
-                        <p> 
+                        <p class="description"> 
                             Carregando...
                         </p>
                     </li>
