--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/fonts/neue-machina/NeueMachina-Regular.otf">
+    <link rel="stylesheet" href="assets/fonts/neue-machina/NeueMachina-Regular.otf">
 
     <!-- Normalize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,7 +26,7 @@
 <body>
     <main class="main">
         <header class="header">
-            <img src="/assets/img/imagem_portfolio.jpg" alt="Foto de Perfil" class="photo" id="profile.photo">
+            <img src="assets/img/imagem_portfolio.jpg" alt="Foto de Perfil" class="photo" id="profile.photo">
     
             <h1 class="title">
                 Olá, eu sou <span id="profile.name">Carregando...</span>
@@ -55,7 +55,7 @@
                         <h3>Habilidades Profissionais</h3>
                         <ul id="profile.skills.hardSkills">
                             <li>
-                                <img src="/assets/img/icons/tools/react.svg" alt="react" title="react">
+                                <img src="assets/img/icons/tools/react.svg" alt="react" title="react">
                             </li>
                         </ul>
                     </section>
@@ -116,8 +116,8 @@
         </section>
     </main>
 
-    <script src="/assets/js/acordeon.js"></script>
-    <script src="/assets/js/api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/acordeon.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
